# realsense

camera/launch/: realsense_r200_rgbd.launch
camera/launch/includes/: realsense_r200_nodelet.launch.xml
camera/src/: realsense_camera_nodelet.cpp  realsense_camera_nodelet.h
realsense2_camera/: CMakeLists.txt
realsense2_camera/include/: base_realsense_node.h  constants.h
realsense2_camera/src/: base_realsense_node.cpp  catch_python_module.cpp  python_module.cpp  test_base_realsense_node.cpp
